<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground">

    <ImageView
        android:id="@+id/ivArrow"
        android:layout_width="@dimen/fragment_work_plan_item_ic_arrow_size"
        android:layout_height="@dimen/fragment_work_plan_item_ic_arrow_size"
        android:src="@drawable/ic_arrow_right"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/fragment_work_plan_item_space_small"/>
    <LinearLayout
        android:layout_toLeftOf="@+id/ivArrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/fragment_work_plan_item_space_large">

        <th.co.ask.eip_mobile.view.CustomTextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="Name"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/fragment_work_plan_item_primary_text_size"
            app:typeface="robotoBlack" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_work_plan_item_space_small"
            android:orientation="horizontal">

            <th.co.ask.eip_mobile.view.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_work_plan_item_txt_sale_call_title"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/fragment_work_plan_item_secondary_text_size"
                app:typeface="roboto" />

            <th.co.ask.eip_mobile.view.CustomTextView
                android:id="@+id/tvSaleCallNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/fragment_work_plan_item_secondary_text_size"
                app:typeface="roboto" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_work_plan_item_space_small"
            android:orientation="horizontal">

            <th.co.ask.eip_mobile.view.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_work_plan_item_txt_todo_name_title"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/fragment_work_plan_item_secondary_text_size"
                app:typeface="roboto" />

            <th.co.ask.eip_mobile.view.CustomTextView
                android:id="@+id/tvTodoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/fragment_work_plan_item_secondary_text_size"
                app:typeface="roboto" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_work_plan_item_space_small"
            android:orientation="horizontal">

            <th.co.ask.eip_mobile.view.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_work_plan_item_txt_note_title"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/fragment_work_plan_item_secondary_text_size"
                app:typeface="roboto" />

            <th.co.ask.eip_mobile.view.CustomTextView
                android:id="@+id/tvNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/fragment_work_plan_item_secondary_text_size"
                app:typeface="roboto" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>